--- a/contact.html
+++ b/contact.html
@@ -25,10 +25,10 @@
 </ul>
 </div>
 
-<br>
+<br><br><br><br><br><br>
 
 <div ID="email">
-	<p>zhangwenyu7@gmail.com</p
+	<p>zhangwenyu7@gmail.com</p>
 </div>
 
 <br>
