--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   <li><a href="home.html">HOME</a></li>
   <li><a href="showreel.html">SHOWREEL</a></li>
   <li><a href="vfx.html">VFX</a></li>
-  <li><a href="design.html">DESIGN</a></li>
+  <li><a href="photography.html">PHOTO</a></li>
   <li><a href="blog.html">BLOG</a></li>
   <li><a href="about.html">ABOUT</a></li>
   <li><a href="contact.html">CONTACT</a></li>
