--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,8 @@
 <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
 <a href="https://www.linkedin.com/in/wenyu-zhang-762a35b7/" class="fa fa-linkedin"></a>
 <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
+<a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
+</div>
 </div>
 
 </body>
