--- a/photography.html
+++ b/photography.html
@@ -6,35 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 
-		<style>
-
-			.infograph-content {
-				display: none;
-			}
-
-		</style>
-
-
-		<script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
-		<script>
-
-		$(".infograph").click(function(){
-			$(".infograph-content").show();
-			$(".mobile-app-content").hide();
-		});
-
-		$(".mobile-app").click(function(){
-			$(".infograph-content").hide();
-			$(".mobile-app-content").show();
-		});
-
-		</script>
-
-	</head>
-
 <body>
-
-</div>
 
 <h1>ANDY ZHANG</h1>
 <h4>Junior 3D Generalist</h4>
@@ -44,30 +16,19 @@
   <li><a href="home.html">HOME</a></li>
   <li><a href="showreel.html">SHOWREEL</a></li>
   <li><a href="vfx.html">VFX</a></li>
-  <li><a href="design.html">DESIGN</a></li>
+  <li><a href="photography.html">PHOTO</a></li>
   <li><a href="blog.html">BLOG</a></li>
   <li><a href="about.html">ABOUT</a></li>
   <li><a href="contact.html">CONTACT</a></li>
 </ul>
 </div>
 
+<img src="images/IMG_0224" />
+<img src="images/IMG_0025(PS)" />
+<img src="images/IMG_0283(PS)" />
+<img src="images/IMG_0447(PS)" />
+<img src="images/IMG_9896(PS)" />
 <br>
-
-<div ID="design_projects"
-<ul>
-  <li><a class="mobile-app" href="#">MOBILE APP</a></li>
-	<li><a class="epics" href="#">ASSISTANT DEVICE</a></li>
-  <li><a class="infograph" href="#">INFOGRAPHICS</a></li>
-</ul>
-</div>
-
-<!--<div class="mobile-app-content">
-	<h4>Weight Alarm</h4>
-</div>-->
-
-<div class="infograph-content">
-	<h1>infograph</h1>
-</div>
 
 </body>
 </html>
