--- a/photography.html
+++ b/photography.html
@@ -23,11 +23,11 @@
 </ul>
 </div>
 
-<img src="images/IMG_0224" />
-<img src="images/IMG_0025(PS)" />
-<img src="images/IMG_0283(PS)" />
-<img src="images/IMG_0447(PS)" />
-<img src="images/IMG_9896(PS)" />
+<img src="images/IMG_0224.jpg" />
+<img src="images/IMG_0025(PS).jpg" />
+<img src="images/IMG_0283(PS).jpg" />
+<img src="images/IMG_0447(PS).jpg" />
+<img src="images/IMG_9896(PS).jpg" />
 <br>
 
 </body>
