--- a/photography.html
+++ b/photography.html
@@ -24,7 +24,7 @@
 </div>
 
 <img src="images/IMG_0224.jpg" />
-<img src="images/IMG_0025(PS).jpg" />
+<img src="images/IMG_0025(PS).jpg" width="20%" height="20%"/>
 <img src="images/IMG_0283(PS).jpg" />
 <img src="images/IMG_0447(PS).jpg" />
 <img src="images/IMG_9896(PS).jpg" />
