--- a/photography.html
+++ b/photography.html
@@ -23,12 +23,16 @@
 </ul>
 </div>
 
+<div class="gallery">
 <img src="images/IMG_0224.jpg" />
-<img src="images/IMG_0025(PS).jpg" width="20%" height="20%"/>
+<img src="images/IMG_0025(PS).jpg" />
 <img src="images/IMG_0283(PS).jpg" />
 <img src="images/IMG_0447(PS).jpg" />
 <img src="images/IMG_9896(PS).jpg" />
+</div>
+
 <br>
+
 
 </body>
 </html>
