--- a/photography.html
+++ b/photography.html
@@ -23,15 +23,17 @@
 </ul>
 </div>
 
+<br><br><br><br><br><br>
 <div class="gallery">
 <img src="images/IMG_0224.jpg" />
 <img src="images/IMG_0025(PS).jpg" />
 <img src="images/IMG_0283(PS).jpg" />
 <img src="images/IMG_0447(PS).jpg" />
 <img src="images/IMG_9896(PS).jpg" />
+<img src="IMG_007.jpg" />
 </div>
 
-<br>
+
 
 
 </body>
