--- a/photography.html
+++ b/photography.html
@@ -30,7 +30,7 @@
 <img src="images/IMG_0283(PS).jpg" />
 <img src="images/IMG_0447(PS).jpg" />
 <img src="images/IMG_9896(PS).jpg" />
-<img src="IMG_007.jpg" />
+<img src="images/IMG_007.jpg" />
 </div>
 
 
