--- a/design.html
+++ b/design.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -26,18 +26,28 @@
 	</ul>
 	</nav>
 
-
 <br>
 
-<div class="cover">
-<img src="images/cover.jpg" style="width:1300px;height:850px" />
+<div ID="design_projects">
+<ul>
+   <li><a class="mobile-app" href="#">MOBILE APP</a></li>
+   <li><a class="epics" href="#">ASSISTANT DEVICE</a></li>
+   <li><a class="infograph" href="#">INFOGRAPHICS</a></li>
+</ul>
 </div>
+
+<!--<div class="mobile-app-content">
+	<h4>Weight Alarm</h4>
+</div>-->
+
+<div class="infograph-content">
+	<h1>infograph</h1>
+</div>
+
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
 </footer>
-
-</div>
 
 </body>
 </html>
