--- a/about.html
+++ b/about.html
@@ -3,36 +3,47 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<title>Andy Zhang|Portfolio</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+        <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-<h1>ANDY ZHANG</h1>
-<h4>Junior 3D Generalist</h4>
+<div class="container">
 
-<div class="active">
-<ul>
-  <li><a href="home.html">HOME</a></li>
-  <li><a href="showreel.html">SHOWREEL</a></li>
-  <li><a href="vfx.html">VFX</a></li>
-  <li><a href="photography.html">PHOTO</a></li>
-  <li><a href="blog.html">BLOG</a></li>
-  <li><a href="about.html">ABOUT</a></li>
-  <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div>
+<img src="images/banner.png" class="banner"/>
 
-<br><br><br><br><br>
+	<nav>
+	<ul>
+ 		<li><a href="home.html">HOME</a></li>
+ 	    <li><a href="showreel.html">SHOWREEL</a></li>
+ 	 	<li><a href="vfx.html">VFX</a></li>
+ 	 	<li><a href="design.html">DESIGN</a></li>
+	  	<li><a href="photo.html">PHOTO</a></li>
+ 	 	<li><a href="about.html">ABOUT</a></li>
+ 		<li><a href="contact.html">CONTACT</a></li>
+	</ul>
+	</nav>
 
+<br><br><br><br><br><br><br><br><br>
+
+<div ID="myself-pic">
 <img src="images/myself.jpg" style="width:301px;height:461px;" alt="Myself"/>
+</div>
 
 <br>
 
 <div ID="bio">
 <p>Dating back to 2010 during his second year in high school, Wenyu (Andy) Zhang set foot in the industry of visual effects. After becoming familiar with 2D graphics programs, he taught himself industrial-level 3D packages as well as compositing tools. Photography is also one of his hobbies where he can capture the impressive beauty of landscape and architecture. He graduated from Communication University of China with a Bachelor Degree in Digital Media Arts and came to Purdue University to begin his master program. As a visual effect artist, he is always looking forward to creating something elegant and telling an impressive story.</p>
 </div>
+
+
+
+<footer>
+<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+</footer>
+
 
 
 </body>
