--- a/contact.html
+++ b/contact.html
@@ -3,29 +3,31 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<title>Andy Zhang|Portfolio</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        
 </head>
+
 
 <body>
 
-<h1>ANDY ZHANG</h1>
-<h4>Junior 3D Generalist</h4>
+<div class="container">
 
-<div class="active">
-<ul>
-  <li><a href="home.html">HOME</a></li>
-  <li><a href="showreel.html">SHOWREEL</a></li>
-  <li><a href="vfx.html">VFX</a></li>
-  <li><a href="photography.html">PHOTO</a></li>
-  <li><a href="blog.html">BLOG</a></li>
-  <li><a href="about.html">ABOUT</a></li>
-  <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div>
+<img src="images/banner.png" class="banner"/>
 
-<br><br><br><br><br><br>
+	<nav>
+	<ul>
+ 		<li><a href="home.html">HOME</a></li>
+ 	    <li><a href="showreel.html">SHOWREEL</a></li>
+ 	 	<li><a href="vfx.html">VFX</a></li>
+ 	 	<li><a href="design.html">DESIGN</a></li>
+	  	<li><a href="photo.html">PHOTO</a></li>
+ 	 	<li><a href="about.html">ABOUT</a></li>
+ 		<li><a href="contact.html">CONTACT</a></li>
+	</ul>
+	</nav>
+
 
 <div ID="email">
 	<p>zhangwenyu7@gmail.com</p>
@@ -41,7 +43,10 @@
 <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram"></a>
 <a href="http://500px.com/zhangvisual" class="fa fa-500px"></a>
 </div>
-</div>
+
+<footer>
+<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+</footer>
 
 </body>
 </html>
