--- a/showreel.html
+++ b/showreel.html
@@ -3,38 +3,46 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<title>Andy Zhang|Portfolio</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+        <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-<h1>ANDY ZHANG</h1>
-<h4>Junior 3D Generalist</h4>
+<div class="container">
 
-<div class="active">
-<ul>
-  <li><a href="home.html">HOME</a></li>
-  <li><a href="showreel.html">SHOWREEL</a></li>
-  <li><a href="vfx.html">VFX</a></li>
-  <li><a href="photography.html">PHOTO</a></li>
-  <li><a href="blog.html">BLOG</a></li>
-  <li><a href="about.html">ABOUT</a></li>
-  <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div>
+<img src="images/banner.png" class="banner"/>
+
+	<nav>
+	<ul>
+ 		<li><a href="home.html">HOME</a></li>
+ 	    <li><a href="showreel.html">SHOWREEL</a></li>
+ 	 	<li><a href="vfx.html">VFX</a></li>
+ 	 	<li><a href="design.html">DESIGN</a></li>
+	  	<li><a href="photo.html">PHOTO</a></li>
+ 	 	<li><a href="about.html">ABOUT</a></li>
+ 		<li><a href="contact.html">CONTACT</a></li>
+	</ul>
+	</nav>
+
 
 <br>
 <br>
 <br>
 
-<div>
+<div class="showreel">
 	<iframe sandbox="allow-same-origin allow-scripts allow-popups"
 id="foo" width="960" height="540"
 allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""
-src="http://player.vimeo.com/video/181273975?api=1">
+src="http://player.vimeo.com/video/210145177?api=1">
 </iframe>
 </div>
+
+<footer>
+<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+</footer>
+
 
 </body>
 </html>
