--- a/vfx.html
+++ b/vfx.html
@@ -3,58 +3,52 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 		<title>Andy Zhang|Portfolio</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
+        <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
 
-<h1>ANDY ZHANG</h1>
-<h4>Junior 3D Generalist</h4>
+<div class="container">
 
-<div class="active">
-<ul>
-  <li><a href="home.html">HOME</a></li>
-  <li><a href="showreel.html">SHOWREEL</a></li>
-  <li><a href="vfx.html">VFX</a></li>
-  <li><a href="photography.html">PHOTO</a></li>
-  <li><a href="blog.html">BLOG</a></li>
-  <li><a href="about.html">ABOUT</a></li>
-  <li><a href="contact.html">CONTACT</a></li>
-</ul>
-</div>
+<img src="images/banner.png" class="banner"/>
 
-<br>
-<br>
-<br>
-
-<div>
-	<iframe sandbox="allow-same-origin allow-scripts allow-popups"
-id="foo" width="960" height="540"
-allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""
-src="http://player.vimeo.com/video/181273975?api=1">
-</iframe>
-</div>
-
-<div>
-	<iframe sandbox="allow-same-origin allow-scripts allow-popups"
-id="foo" width="960" height="540"
-allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""
-src="http://player.vimeo.com/video/153671854?api=1">
-</iframe>
-</div>
+	<nav>
+	<ul>
+ 		<li><a href="home.html">HOME</a></li>
+ 	    <li><a href="showreel.html">SHOWREEL</a></li>
+ 	 	<li><a href="vfx.html">VFX</a></li>
+ 	 	<li><a href="design.html">DESIGN</a></li>
+	  	<li><a href="photo.html">PHOTO</a></li>
+ 	 	<li><a href="about.html">ABOUT</a></li>
+ 		<li><a href="contact.html">CONTACT</a></li>
+	</ul>
+	</nav>
 
 <br>
+<br>
+<br><br><br><br>
 
-<div>
-	<iframe sandbox="allow-same-origin allow-scripts allow-popups"
-id="foo" width="960" height="540"
-allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""
-src="http://player.vimeo.com/video/150784491?api=1">
-</iframe>
+<div ID="video-a">
+	<iframe src="https://player.vimeo.com/video/181273975?loop=1" width="600" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
+<div ID="video-b">
+	<iframe src="https://player.vimeo.com/video/153671854" width="600" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
+
+<div ID="video-c">
+	<iframe src="https://player.vimeo.com/video/150784491" width="600" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
+
+
+<footer>
+<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
+</footer>
+
+
+
 
 </body>
 </html>
