--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
         <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 	<style>
-	 background: url(images/cover.jpg) no-repeat center center fixed; 
-	  -webkit-background-size: cover;
-	  -moz-background-size: cover;
-	  -o-background-size: cover;
-	  background-size: cover;
+	.container {
+		 background: url(images/cover.jpg) no-repeat center center fixed; 
+		  -webkit-background-size: cover;
+		  -moz-background-size: cover;
+		  -o-background-size: cover;
+		  background-size: cover;
+		}
 		
 	</style>
 </head>
