--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
         <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
-	
 </head>
 
 <body>
 
-
+<div class="container">
 
 <img src="images/banner.png" class="banner"/>
 
@@ -26,13 +25,13 @@
  		<li><a href="contact.html">CONTACT</a></li>
 	</ul>
 	</nav>
-<div class="container">
-	<div class="cover">
-  		<img src="images/cover.jpg" alt="">
-	</div>
+
 
 <br>
 
+<div class="cover">
+<img src="images/cover.jpg" style="width:1300px;height:850px" />
+</div>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
