--- a/showreel.html
+++ b/showreel.html
@@ -33,11 +33,15 @@
 
 <div class="showreel">
 	<iframe sandbox="allow-same-origin allow-scripts allow-popups"
-id="foo" width="960" height="540"
+id="foo" width="760" height="440"
 allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""
 src="http://player.vimeo.com/video/210145177?api=1">
 </iframe>
 </div>
+
+<h4>
+<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf">shot breakdown sheet</a>
+</h4>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
