--- a/design.html
+++ b/design.html
@@ -26,9 +26,7 @@
 	</ul>
 	</nav>
 
-<br>
-
-<div ID="design_projects">
+<!--<div ID="design_projects">
 <ul>
    <li><a class="mobile-app" href="#">MOBILE APP</a></li>
    <li><a class="epics" href="#">ASSISTANT DEVICE</a></li>
@@ -36,14 +34,14 @@
 </ul>
 </div>
 
-<!--<div class="mobile-app-content">
+<div class="mobile-app-content">
 	<h4>Weight Alarm</h4>
-</div>-->
+</div>
 
 <div class="infograph-content">
 	<h1>infograph</h1>
 </div>
-
+-->
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
