--- a/showreel.html
+++ b/showreel.html
@@ -26,9 +26,6 @@
 	</ul>
 	</nav>
 
-
-<br>
-<br>
 <br>
 
 <div class="showreel">
@@ -39,9 +36,9 @@ src="http://player.vimeo.com/video/210145177?api=1">
 </iframe>
 </div>
 
-<h4>
-<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf">shot breakdown sheet</a>
-</h4>
+<div ID="sheet">
+<a href="files/Wenyu_2017Showreel_Shot Breakdown.pdf" target="_blank">Shot Breakdown Sheet</a>
+</div>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
