--- a/home.html
+++ b/home.html
@@ -26,11 +26,10 @@
 	</ul>
 	</nav>
 
-
 <br>
 
 <div class="cover">
-<img src="images/cover.jpg" style="width:1000px;height:750px" />
+<img src="images/cover.jpg" style="width:100%" />
 </div>
 
 <footer>
