--- a/photo.html
+++ b/photo.html
@@ -24,7 +24,9 @@
  	 	<li><a href="about.html">ABOUT</a></li>
  		<li><a href="contact.html">CONTACT</a></li>
 	</ul>
-	</nav><br><br><br>
+	</nav>
+
+<br>
 
 <!--<div class="gallery">
 <img src="images/IMG_0224.jpg" />
@@ -38,25 +40,33 @@
 
 <div class="gallery">
   <a target="_blank" href="images/IMG_0224.jpg">
-    <img src="images/IMG_0224.jpg" alt="Trolltunga Norway" width="400" height=300">
-  </a>
-  <div class="desc">1</div>
+    <img src="images/IMG_0224.jpg" alt="a" width="500px" height="200px">
+  </a>  
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/IMG_0025(PS).jpg">
-    <img src="images/IMG_0025(PS).jpg" alt="Forest" width="400" height="300">
+    <img src="images/IMG_0025(PS).jpg" alt="b" width="500px" height="350px">
   </a>
-  <div class="desc">2</div>
 </div>
 
 <div class="gallery">
   <a target="_blank" href="images/IMG_0283(PS).jpg">
-    <img src="images/IMG_0283(PS).jpg" alt="Northern Lights" width="400" height="300">
+    <img src="images/IMG_0283(PS).jpg" alt="c" width="500" height="350">
   </a>
-  <div class="desc">3</div>
 </div>
 
+<div class="gallery">
+  <a target="_blank" href="images/IMG_0447(PS).jpg">
+    <img src="images/IMG_0447(PS).jpg" alt="d" width="500" height="350">
+  </a>
+</div>
+
+<div class="gallery">
+  <a target="_blank" href="images/IMG_9896(PS).jpg">
+    <img src="images/IMG_9896(PS).jpg" alt="e" width="500" height="350">
+  </a>
+</div>
 
 
 
