--- a/vfx.html
+++ b/vfx.html
@@ -27,19 +27,17 @@
 	</nav>
 
 <br>
-<br>
-<br><br><br><br>
 
-<div ID="video-a">
-	<iframe src="https://player.vimeo.com/video/181273975?loop=1" width="600" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="floating-box">
+	<iframe src="https://player.vimeo.com/video/181273975?loop=1" width="650px" height="450px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
-<div ID="video-b">
-	<iframe src="https://player.vimeo.com/video/153671854" width="600" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="floating-box">
+	<iframe src="https://player.vimeo.com/video/153671854"  width="650px" height="450px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
-<div ID="video-c">
-	<iframe src="https://player.vimeo.com/video/150784491" width="600" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<div class="floating-box">
+	<iframe src="https://player.vimeo.com/video/150784491"  width="650px" height="450px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 
