--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-        
+
 </head>
 
 
@@ -24,7 +24,7 @@
  	 	<li><a href="design.html">DESIGN</a></li>
 	  	<li><a href="photo.html">PHOTO</a></li>
  	 	<li><a href="about.html">ABOUT</a></li>
- 		<li><a href="contact.html">CONTACT</a></li>
+ 		<li><a href="contact.html" id="contact-menu">CONTACT</a></li>
 	</ul>
 	</nav>
 
@@ -36,7 +36,7 @@
 
 <br>
 
-<div ID="icons">
+<div class="icons">
 <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook"></a>
 <a href="https://twitter.com/zhangvisual" class="fa fa-twitter"></a>
 <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo"></a>
