--- a/design.html
+++ b/design.html
@@ -19,7 +19,7 @@
  		<li><a href="home.html">HOME</a></li>
  	    <li><a href="showreel.html">SHOWREEL</a></li>
  	 	<li><a href="vfx.html">VFX</a></li>
- 	 	<li><a href="design.html">DESIGN</a></li>
+ 	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
 	  	<li><a href="photo.html">PHOTO</a></li>
  	 	<li><a href="about.html">ABOUT</a></li>
  		<li><a href="contact.html">CONTACT</a></li>
@@ -42,6 +42,8 @@
 	<h1>infograph</h1>
 </div>
 -->
+
+<h4>Coming soon ...</h4>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
