--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 
 	<nav>
 	<ul>
- 		<li><a href="home.html">HOME</a></li>
+ 		<li><a href="home.html" id="home-menu">HOME</a></li>
  	    <li><a href="showreel.html">SHOWREEL</a></li>
  	 	<li><a href="vfx.html">VFX</a></li>
  	 	<li><a href="design.html">DESIGN</a></li>
