--- a/photo.html
+++ b/photo.html
@@ -20,7 +20,7 @@
  	    <li><a href="showreel.html">SHOWREEL</a></li>
  	 	<li><a href="vfx.html">VFX</a></li>
  	 	<li><a href="design.html">DESIGN</a></li>
-	  	<li><a href="photo.html">PHOTO</a></li>
+	  	<li><a href="photo.html" id="photo-menu">PHOTO</a></li>
  	 	<li><a href="about.html">ABOUT</a></li>
  		<li><a href="contact.html">CONTACT</a></li>
 	</ul>
@@ -39,36 +39,34 @@
 -->
 
 <div class="gallery">
-  <a target="_blank" href="images/IMG_0224.jpg">
-    <img src="images/IMG_0224.jpg" alt="a" width="500px" height="200px">
-  </a>  
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="images/IMG_0025(PS).jpg">
-    <img src="images/IMG_0025(PS).jpg" alt="b" width="500px" height="350px">
-  </a>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="images/IMG_0283(PS).jpg">
-    <img src="images/IMG_0283(PS).jpg" alt="c" width="500" height="350">
-  </a>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="images/IMG_0447(PS).jpg">
-    <img src="images/IMG_0447(PS).jpg" alt="d" width="500" height="350">
-  </a>
-</div>
-
-<div class="gallery">
-  <a target="_blank" href="images/IMG_9896(PS).jpg">
+  <a href="images/IMG_9896(PS).jpg">
     <img src="images/IMG_9896(PS).jpg" alt="e" width="500" height="350">
   </a>
 </div>
 
+<div class="gallery">
+  <a href="images/IMG_0283(PS).jpg">
+    <img src="images/IMG_0283(PS).jpg" alt="c" width="500px" height="350px">
+  </a>
+</div>
 
+<div class="gallery">
+  <a href="images/IMG_0447(PS).jpg">
+    <img src="images/IMG_0447(PS).jpg" alt="d" width="500px" height="350px">
+  </a>
+</div>
+
+<div class="gallery">
+  <a href="images/IMG_0224.jpg">
+    <img src="images/IMG_0224.jpg" alt="a" width="500px" height="350px">
+  </a>
+</div>
+
+<div class="gallery">
+  <a href="images/IMG_0025(PS).jpg">
+    <img src="images/IMG_0025(PS).jpg" alt="b" width="500px" height="350px">
+  </a>
+</div>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
