--- a/showreel.html
+++ b/showreel.html
@@ -17,10 +17,10 @@
 	<nav>
 	<ul>
  		<li><a href="home.html">HOME</a></li>
- 	    <li><a href="showreel.html">SHOWREEL</a></li>
+ 	  <li><a href="showreel.html" id="showreel-menu">SHOWREEL</a></li>
  	 	<li><a href="vfx.html">VFX</a></li>
  	 	<li><a href="design.html">DESIGN</a></li>
-	  	<li><a href="photo.html">PHOTO</a></li>
+	  <li><a href="photo.html">PHOTO</a></li>
  	 	<li><a href="about.html">ABOUT</a></li>
  		<li><a href="contact.html">CONTACT</a></li>
 	</ul>
@@ -29,11 +29,7 @@
 <br>
 
 <div class="showreel">
-	<iframe sandbox="allow-same-origin allow-scripts allow-popups"
-id="foo" width="760" height="440"
-allowfullscreen="" webkitallowfullscreen="" mozallowfullscreen=""
-src="http://player.vimeo.com/video/210145177?api=1">
-</iframe>
+<iframe src="https://player.vimeo.com/video/210145177?title=0&byline=0&portrait=0" width="800px" height="480px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 <div ID="sheet">
