--- a/vfx.html
+++ b/vfx.html
@@ -18,7 +18,7 @@
 	<ul>
  		<li><a href="home.html">HOME</a></li>
  	    <li><a href="showreel.html">SHOWREEL</a></li>
- 	 	<li><a href="vfx.html">VFX</a></li>
+ 	 	<li><a href="vfx.html" id="vfx-menu">VFX</a></li>
  	 	<li><a href="design.html">DESIGN</a></li>
 	  	<li><a href="photo.html">PHOTO</a></li>
  	 	<li><a href="about.html">ABOUT</a></li>
@@ -29,15 +29,15 @@
 <br>
 
 <div class="floating-box">
-	<iframe src="https://player.vimeo.com/video/181273975?loop=1" width="650px" height="450px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="540" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 <div class="floating-box">
-	<iframe src="https://player.vimeo.com/video/153671854"  width="650px" height="450px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="540" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 <div class="floating-box">
-	<iframe src="https://player.vimeo.com/video/150784491"  width="650px" height="450px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<iframe src="https://player.vimeo.com/video/150784491?title=0&byline=0&portrait=0" width="540" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 
 
