--- a/design.html
+++ b/design.html
@@ -1,53 +1,80 @@
-﻿<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-		<title>Andy Zhang|Portfolio</title>
-		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-        <link rel="shortcut icon" href="images/banner.png" />
-		<link href="css/master.css" rel="stylesheet" type="text/css" />
-</head>
+<!DOCTYPE html>
+<html >
+  <head>
+     <script type="text/javascript" src="script/d3.js"></script>
+  </head>
+  <body>
+  <div class="example_div"></div>
+    <script type="text/javascript">
 
-<body>
+	var diameter = 500, //max size of the bubbles
+    color    = d3.scale.category20b(); //color category
 
-<div class="container">
+var bubble = d3.layout.pack()
+    .sort(null)
+    .size([diameter, diameter])
+    .padding(1.5);
 
-<img src="images/banner.png" class="banner"/>
+var svg = d3.select("body")
+    .append("svg")
+    .attr("width", diameter)
+    .attr("height", diameter)
+    .attr("class", "bubble");
 
-	<nav>
-	<ul>
- 		<li><a href="home.html">HOME</a></li>
- 	    <li><a href="showreel.html">SHOWREEL</a></li>
- 	 	<li><a href="vfx.html">VFX</a></li>
- 	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
-	  	<li><a href="photo.html">PHOTO</a></li>
- 	 	<li><a href="about.html">ABOUT</a></li>
- 		<li><a href="contact.html">CONTACT</a></li>
-	</ul>
-	</nav>
+var tooltip = d3.select('body').append("div")
+		.style("position", "absolute")
+		.style("z-index", "10")
+		.style("visibility", "hidden")
+		.text("tooltip");
 
-<!--<div ID="design_projects">
-<ul>
-   <li><a class="mobile-app" href="#">MOBILE APP</a></li>
-   <li><a class="epics" href="#">ASSISTANT DEVICE</a></li>
-   <li><a class="infograph" href="#">INFOGRAPHICS</a></li>
-</ul>
-</div>
+d3.csv("fruit.csv", function(error, data){
 
-<div class="mobile-app-content">
-	<h4>Weight Alarm</h4>
-</div>
+    //convert numerical values from strings to numbers
+    data = data.map(function(d){ d.value = +d["Amount"]; return d; });
 
-<div class="infograph-content">
-	<h1>infograph</h1>
-</div>
--->
+    //bubbles needs very specific format, convert data to this.
+    var nodes = bubble.nodes({children:data}).filter(function(d) { return !d.children; });
 
-<h4>Coming soon ...</h4>
+    //setup the chart
+    var bubbles = svg.append("g")
+        .attr("transform", "translate(0,0)")
+        .selectAll(".bubble")
+        .data(nodes)
+        .enter();
 
-<footer>
-<p>&copy;2017 Andy Zhang | All Rights Reserved</p>
-</footer>
+    //create the bubbles
+    bubbles.append("circle")
+        .attr("r", function(d){ return d.r; })
+        .attr("cx", function(d){ return d.x; })
+        .attr("cy", function(d){ return d.y; })
+        .style("fill", function(d) { return color(d.value); })
+        .on("mouseover", function(d) {
+              tooltip.transition()
+                .duration(200)
+                .style("visibility", "visible");
+                tooltip.html(d.value);
+	      })
+	      .on("mousemove", function() {
+	          return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
+	      })
+	      .on("mouseout", function(){
+	      	tooltip.transition()
+                .duration(200)
+                .style("visibility", "hidden");});
 
-</body>
+    //format the text for each bubble
+    bubbles.append("text")
+        .attr("x", function(d){ return d.x; })
+        .attr("y", function(d){ return d.y + 5; })
+        .attr("text-anchor", "middle")
+        .text(function(d){ return d["Fruit"]; })
+        .style({
+            "fill":"white",
+            "font-family":"Helvetica Neue, Helvetica, Arial, san-serif",
+            "font-size": "12px"
+        });
+})
+    </script>
+  </body>
 </html>
