--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html >
   <head>
-     <script type="text/javascript" src="script/d3.js"></script>
+     <script type="text/javascript" src="https://cdn.bootcss.com/d3/3.5.17/d3.js"></script>
   </head>
   <body>
   <div class="example_div"></div>
