--- a/design.html
+++ b/design.html
@@ -4,8 +4,27 @@
   <head>
      <script type="text/javascript" src="https://cdn.bootcss.com/d3/3.5.17/d3.js"></script>
   </head>
+  <style type="text/css">
+    circle:hover {
+        -webkit-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+        -o-transform: scale(1.5);
+        transform: scale(1.5);
+        z-index: 1000;
+        display: block;
+    }
+    * {
+        -webkit-transition: all 0.5s ease-in-out;
+        -moz-transition: all 0.5s ease-in-out;
+        -ms-transition: all 0.5s ease-in-out;
+        -o-transition: all 0.5s ease-in-out;
+        transition: all 0.5s ease-in-out;
+        transform-origin: 50% 50% 0;
+    }
+
+  </style>
   <body>
-  <div class="example_div"></div>
+
     <script type="text/javascript">
 
 	var diameter = 500, //max size of the bubbles
@@ -21,14 +40,14 @@ var svg = d3.select("body")
     .attr("width", diameter)
     .attr("height", diameter)
     .attr("class", "bubble");
-
+    
 var tooltip = d3.select('body').append("div")
 		.style("position", "absolute")
 		.style("z-index", "10")
 		.style("visibility", "hidden")
 		.text("tooltip");
 
-d3.csv("fruit.csv", function(error, data){
+d3.csv("data.csv", function(error, data){
 
     //convert numerical values from strings to numbers
     data = data.map(function(d){ d.value = +d["Amount"]; return d; });
@@ -50,17 +69,19 @@ d3.csv("fruit.csv", function(error, data){
         .attr("cy", function(d){ return d.y; })
         .style("fill", function(d) { return color(d.value); })
         .on("mouseover", function(d) {
-              tooltip.transition()
-                .duration(200)
+
+              tooltip.transition()		
+                .duration(200)		
                 .style("visibility", "visible");
+              
                 tooltip.html(d.value);
 	      })
 	      .on("mousemove", function() {
 	          return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
 	      })
 	      .on("mouseout", function(){
-	      	tooltip.transition()
-                .duration(200)
+	      	tooltip.transition()		
+                .duration(200)		
                 .style("visibility", "hidden");});
 
     //format the text for each bubble
@@ -68,12 +89,25 @@ d3.csv("fruit.csv", function(error, data){
         .attr("x", function(d){ return d.x; })
         .attr("y", function(d){ return d.y + 5; })
         .attr("text-anchor", "middle")
-        .text(function(d){ return d["Fruit"]; })
+        .text(function(d){ return d["Country"]; })
         .style({
-            "fill":"white",
+            "fill":"white", 
             "font-family":"Helvetica Neue, Helvetica, Arial, san-serif",
             "font-size": "12px"
-        });
+        })
+        .style("cursor","default")
+        .on("mouseover", function(d) {
+              tooltip.transition()      
+                .duration(200)      
+                .style("visibility", "visible");    
+                tooltip.html(d.value);
+          }).on("mousemove", function() {
+              return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
+          })
+          .on("mouseout", function(){
+            tooltip.transition()        
+                .duration(200)      
+                .style("visibility", "hidden");});
 })
     </script>
   </body>
