--- a/design.html
+++ b/design.html
@@ -40,14 +40,14 @@ var svg = d3.select("body")
     .attr("width", diameter)
     .attr("height", diameter)
     .attr("class", "bubble");
-    
+
 var tooltip = d3.select('body').append("div")
 		.style("position", "absolute")
 		.style("z-index", "10")
 		.style("visibility", "hidden")
 		.text("tooltip");
 
-d3.csv("data.csv", function(error, data){
+d3.csv("data/data.csv", function(error, data){
 
     //convert numerical values from strings to numbers
     data = data.map(function(d){ d.value = +d["Amount"]; return d; });
@@ -70,18 +70,18 @@ d3.csv("data.csv", function(error, data){
         .style("fill", function(d) { return color(d.value); })
         .on("mouseover", function(d) {
 
-              tooltip.transition()		
-                .duration(200)		
+              tooltip.transition()
+                .duration(200)
                 .style("visibility", "visible");
-              
+
                 tooltip.html(d.value);
 	      })
 	      .on("mousemove", function() {
 	          return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
 	      })
 	      .on("mouseout", function(){
-	      	tooltip.transition()		
-                .duration(200)		
+	      	tooltip.transition()
+                .duration(200)
                 .style("visibility", "hidden");});
 
     //format the text for each bubble
@@ -91,22 +91,22 @@ d3.csv("data.csv", function(error, data){
         .attr("text-anchor", "middle")
         .text(function(d){ return d["Country"]; })
         .style({
-            "fill":"white", 
+            "fill":"white",
             "font-family":"Helvetica Neue, Helvetica, Arial, san-serif",
             "font-size": "12px"
         })
         .style("cursor","default")
         .on("mouseover", function(d) {
-              tooltip.transition()      
-                .duration(200)      
-                .style("visibility", "visible");    
+              tooltip.transition()
+                .duration(200)
+                .style("visibility", "visible");
                 tooltip.html(d.value);
           }).on("mousemove", function() {
               return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
           })
           .on("mouseout", function(){
-            tooltip.transition()        
-                .duration(200)      
+            tooltip.transition()
+                .duration(200)
                 .style("visibility", "hidden");});
 })
     </script>
