--- a/design.html
+++ b/design.html
@@ -3,6 +3,7 @@
 <html >
   <head>
      <script type="text/javascript" src="https://cdn.bootcss.com/d3/3.5.17/d3.js"></script>
+     <link href="css/master.css" rel="stylesheet" type="text/css" />
   </head>
   <style type="text/css">
     circle:hover {
