--- a/design.html
+++ b/design.html
@@ -73,10 +73,7 @@ d3.csv("data/data.csv", function(error, data){
 
               tooltip.transition()
                 .duration(200)
-                .style({
-                  "visibility", "visible",
-                  "fill":"white"
-                });
+                .style("visibility", "visible");
 
                 tooltip.html(d.value);
 	      })
@@ -98,7 +95,6 @@ d3.csv("data/data.csv", function(error, data){
             "fill":"white",
             "font-family":"Helvetica Neue, Helvetica, Arial, san-serif",
             "font-size": "10px"
-
         })
         .style("cursor","default")
         .on("mouseover", function(d) {
