--- a/design.html
+++ b/design.html
@@ -11,7 +11,7 @@
 </head>
 
 <style type="text/css">
-    circle:hover {
+       circle:hover {
         -webkit-transform: scale(1.5);
         -ms-transform: scale(1.5);
         -o-transform: scale(1.5);
@@ -20,14 +20,13 @@
         display: block;
     }
     * {
-        -webkit-transition: all 0.5s ease-in-out;
-        -moz-transition: all 0.5s ease-in-out;
-        -ms-transition: all 0.5s ease-in-out;
-        -o-transition: all 0.5s ease-in-out;
-        transition: all 0.5s ease-in-out;
+        -webkit-transition: all 0.2s ease-in-out;
+        -moz-transition: all 0.2s ease-in-out;
+        -ms-transition: all 0.2s ease-in-out;
+        -o-transition: all 0.2s ease-in-out;
+        transition: all 0.2s ease-in-out;
         transform-origin: 50% 50% 0;
     }
-
 </style>
 
 <body>
@@ -37,123 +36,35 @@
 <img src="images/banner.png" class="banner"/>
 
 	<nav>
-	<ul>
- 		<li><a href="home.html">HOME</a></li>
- 	    <li><a href="showreel.html">SHOWREEL</a></li>
- 	 	<li><a href="vfx.html">VFX</a></li>
- 	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
-	  	<li><a href="photo.html">PHOTO</a></li>
- 	 	<li><a href="about.html">ABOUT</a></li>
- 		<li><a href="contact.html">CONTACT</a></li>
-	</ul>
+	  <ul>
+	 		<li><a href="home.html">HOME</a></li>
+	 	  <li><a href="showreel.html">SHOWREEL</a></li>
+	 	 	<li><a href="vfx.html">VFX</a></li>
+	 	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
+			<li><a href="photo.html">PHOTO</a></li>
+	 	 	<li><a href="about.html">ABOUT</a></li>
+	 		<li><a href="contact.html">CONTACT</a></li>
+	  </ul>
 	</nav>
 
-<!--<div ID="design_projects">
-<ul>
-   <li><a class="mobile-app" href="#">MOBILE APP</a></li>
-   <li><a class="epics" href="#">ASSISTANT DEVICE</a></li>
-   <li><a class="infograph" href="#">INFOGRAPHICS</a></li>
-</ul>
+<div ID="design-projects">
+	 <li><a class="infographics" href="#">Infographics</a></li>
+	 <li><a class="mobile-app" href="#">Mobile App Design</a></li>
+   <li><a class="epics" href="#">EPICS Project</a></li>
 </div>
--->
 
+<div id="bubble-chart">
+<script type="text/javascript" src="js/bubble-chart.js"></script>
+</div>
 
-
-    <script type="text/javascript">
-
-	var diameter = 500, //max size of the bubbles
-    color    = d3.scale.category20b(); //color category
-
-var bubble = d3.layout.pack()
-    .sort(null)
-    .size([diameter, diameter])
-    .padding(2.0);
-
-var svg = d3.select("body")
-    .append("svg")
-    .attr("width", diameter)
-    .attr("height", diameter)
-    .attr("class", "bubble");
-
-var tooltip = d3.select('body').append("div")
-		.style("position", "absolute")
-		.style("z-index", "10")
-		.style("visibility", "hidden")
-    .style("fill", "white")
-    .text("tooltip");
-
-
-d3.csv("data/data.csv", function(error, data){
-
-    //convert numerical values from strings to numbers
-    data = data.map(function(d){ d.value = +d["Amount"]; return d; });
-
-    //bubbles needs very specific format, convert data to this.
-    var nodes = bubble.nodes({children:data}).filter(function(d) { return !d.children; });
-
-    //setup the chart
-    var bubbles = svg.append("g")
-        .attr("transform", "translate(0,0)")
-        .selectAll(".bubble")
-        .data(nodes)
-        .enter();
-
-    //create the bubbles
-    bubbles.append("circle")
-        .attr("r", function(d){ return d.r; })
-        .attr("cx", function(d){ return d.x; })
-        .attr("cy", function(d){ return d.y; })
-        .style("fill", function(d) { return color(d.value); })
-        .on("mouseover", function(d) {
-
-              tooltip.transition()
-                .duration(200)
-                .style("visibility", "visible");
-
-                tooltip.html(d.value);
-	      })
-	      .on("mousemove", function() {
-	          return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
-	      })
-	      .on("mouseout", function(){
-	      	tooltip.transition()
-                .duration(200)
-                .style("visibility", "hidden");});
-
-    //format the text for each bubble
-    bubbles.append("text")
-        .attr("x", function(d){ return d.x; })
-        .attr("y", function(d){ return d.y + 5; })
-        .attr("text-anchor", "middle")
-        .text(function(d){ return d["Country"]; })
-        .style({
-            "fill":"white",
-            "font-family":"Helvetica Neue, Helvetica, Arial, san-serif",
-            "font-size": "12px"
-        })
-        .style("cursor","default")
-        .on("mouseover", function(d) {
-              tooltip.transition()
-                .duration(200)
-                .style("visibility", "visible");
-                tooltip.html(d.value);
-          }).on("mousemove", function() {
-              return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");
-          })
-          .on("mouseout", function(){
-            tooltip.transition()
-                .duration(200)
-                .style("visibility", "hidden");});
-})
-    </script>
-  </body>
+</body>
 </html>
 
 <footer>
 <p>&copy;2017 Andy Zhang | All Rights Reserved</p>
 </footer>
 
-
 </div>
+
 </body>
 </html>
