--- a/home.html
+++ b/home.html
@@ -2,9 +2,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-		<title>Andy Zhang | Portfolio</title>
+		<title>Andy Zhang|Portfolio</title>
 		<meta name"viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="shortcut icon" href="images/banner.png" />
+        <link rel="shortcut icon" href="images/banner.png" />
 		<link href="css/master.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -26,6 +26,10 @@
 	</ul>
 	</nav>
 
+<br>
+
+<div class="cover">
+<img src="images/cover.jpg" style="width:100%" />
 </div>
 
 <footer>
