--- a/design.html
+++ b/design.html
@@ -19,7 +19,7 @@
     	<nav>
     	  <ul>
     	 		<li><a href="home.html">HOME</a></li>
-    	 	    <li><a href="showreel.html">SHOWREEL</a></li>
+    	 	  <li><a href="showreel.html">SHOWREEL</a></li>
     	 	 	<li><a href="vfx.html">VFX</a></li>
     	 	 	<li><a href="design.html" id="design-menu">DESIGN</a></li>
     			<li><a href="photo.html">PHOTO</a></li>
@@ -38,7 +38,7 @@
 
     <div id="bubble-chart">
         <div id="bubble-chart-title">
-            <h4>Minimum Wage Worldwide</h4>
+            <h4>Minimum Wage Worldwide 2015</h4>
         </div>
         <style type="text/css">
             circle:hover {
